update eslint settings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,19 @@
   "plugins": ["@typescript-eslint"],
   "extends": [
     "plugin:@typescript-eslint/recommended",
-    "plugin:astro/recommended"
+    "plugin:astro/recommended",
+    "airbnb-base",
+    "airbnb-typescript/base"
   ],
+  "parserOptions": {
+    "project": true,
+    "extraFileExtensions": [".astro"]
+  },
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error"
+    "@typescript-eslint/no-explicit-any": "error",
+    "no-await-in-loop": "off",
+    "no-underscore-dangle": "off"
   },
   "overrides": [
     {
@@ -16,7 +24,10 @@
         "parser": "@typescript-eslint/parser",
         "extraFileExtensions": [".astro"]
       },
-      "rules": {}
+      "rules": {
+        "indent": ["error", 2, { "SwitchCase": 1 }],
+        "import/prefer-default-export": "off"
+      }
     }
   ]
 }
