--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint --ext .js,.ts,.astro src",
+    "lint:fix": "eslint --fix src",
     "format": "npx prettier --write .",
     "cache:fetch": "node scripts/blog-contents-cache.cjs",
     "cache:purge": "nx reset && rm -f tmp/*",
@@ -43,7 +44,7 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@nrwl/nx-cloud": "^15.0.2",
+    "@nrwl/nx-cloud": "^18.0.0",
     "@types/async-retry": "^1.4.5",
     "@types/js-base64": "^3.3.1",
     "@types/katex": "^0.16.7",
@@ -52,13 +53,16 @@
     "@types/metascraper-image": "^5.14.0",
     "@types/metascraper-title": "^5.14.0",
     "@types/prismjs": "^1.26.3",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "@typescript-eslint/typescript-estree": "^6.8.0",
     "cli-progress": "^3.12.0",
     "eslint": "^8.51.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-astro": "^0.27.0",
-    "nx": "15.5.3"
+    "nx": "^15.9.7",
+    "prettier": "^3.2.5"
   },
   "nx": {
     "targets": {
