--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "error",
     "no-await-in-loop": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "import/prefer-default-export": "off",
   },
   "overrides": [
     {
@@ -26,7 +27,8 @@
       },
       "rules": {
         "indent": ["error", 2, { "SwitchCase": 1 }],
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "no-nested-ternary": "off"
       }
     }
   ]
