--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "async-retry": "^1.3.3",
     "axios": "^1.4.0",
     "exif-be-gone": "^1.3.2",
+    "gsap": "^3.12.5",
     "katex": "^0.16.7",
     "mermaid": "^10.1.0",
     "metascraper": "^5.34.4",
