--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "project": true,
     "extraFileExtensions": [".astro"]
   },
+  "ignorePatterns": ["public/scripts/fslightbox.js"],
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "error",
