--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "metascraper-description": "^5.34.4",
     "metascraper-image": "^5.34.4",
     "metascraper-title": "^5.34.4",
+    "node-fetch": "^3.3.2",
     "preline": "^2.0.3",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
