--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 18.x
 
       - name: Run format
-        run: npm run format
+        run: npm run lint:fix
 
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
