add 404 page and modify speech bubble css

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "always"
+  },
+  "[astro]": {
+    "editor.defaultFormatter": "astro-build.astro-vscode"
   }
 }
