--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format": "npx prettier --write .",
     "cache:fetch": "node scripts/blog-contents-cache.cjs",
     "cache:purge": "nx reset && rm -f tmp/*",
-    "_fetch-notion-blocks": "node scripts/retrieve-block-children.cjs"
+    "_fetch-notion-blocks": "node scripts/retrieve-block-children.cjs",
+    "clean": "rm -rf dist/* && rm -rf public/notion/*"
   },
   "dependencies": {
     "@astrojs/react": "^3.0.3",
